--- a/TBCInsurance.Application/TBCInsurance.Application.csproj
+++ b/TBCInsurance.Application/TBCInsurance.Application.csproj
@@ -8,4 +8,9 @@
       <ProjectReference Include="..\TBCInsurance.Domain\TBCInsurance.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    </ItemGroup>
+
 </Project>
