--- a/TBCInsurance.Application/TBCInsurance.Application.csproj
+++ b/TBCInsurance.Application/TBCInsurance.Application.csproj
@@ -18,4 +18,8 @@
       <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Students\Validators" />
+    </ItemGroup>
+
 </Project>
